code updated [implement of OOPS concept]

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-FMDF_HOST=fmdp-staging.ddnsfree.com
-FMDF_PORT=6379
-FMDF_PASSWORD=""
-FMDF_DB=0
-FMDF_CHANNEL=adapter_output_topic
+FMDP_HOST=fmdp-staging.ddnsfree.com
+FMDP_PORT=6379
+FMDP_PASSWORD=""
+FMDP_DB=0
+FMDP_CHANNEL=adapter_output_topic
