api created for getting trip data

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ FMDP_PORT=6379
 FMDP_PASSWORD=""
 FMDP_DB=0
 FMDP_CHANNEL=adapter_output_topic
+FMDP_REDIS_HASHKEY=gps_distance_calculator
+ECO_SERVER_PORT=:3000
